--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "AIplot.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.5.1"
+    "express": "^4.18.2",
+    "jest": "^27.5.1",
+    "nodemon": "^3.0.1",
+    "png-js": "^1.0.0"
   }
 }
